--- a/contato.html
+++ b/contato.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="imoveis.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Veja os imóveis disponíveis">Imóveis</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contato.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Fale conosco">Contato</a>
+                        <a class="nav-link text-danger" href="contato.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Fale conosco">Contato</a>
                     </li>
                 </ul>
             </div>
