--- a/sobre.html
+++ b/sobre.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="sobre.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Saiba mais sobre nossa empresa">Sobre</a>
+                            <a class="nav-link text-danger" href="sobre.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Saiba mais sobre nossa empresa">Sobre</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="imoveis.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Veja os imóveis disponíveis">Imóveis</a>
@@ -41,7 +41,7 @@
             </div>
         </nav>
         </header>
-
+<main>
     <!-- Sobre Nós -->
     <section class="py-5">
         <div class="container">
@@ -59,7 +59,7 @@
             </div>
         </div>
     </section>
-
+</main>
     <footer class="bg-dark text-white text-center py-4">
         <div class="container">
             <p class="mb-0">&copy; 2024 Imobiliária Exemplo. Todos os direitos reservados.</p>
