--- a/imoveis.html
+++ b/imoveis.html
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="sobre.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Saiba mais sobre nossa empresa">Sobre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="imoveis.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Veja os imóveis disponíveis">Imóveis</a>
+                            <a class="nav-link text-danger" href="imoveis.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Veja os imóveis disponíveis">Imóveis</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contato.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Fale conosco">Contato</a>
@@ -50,7 +50,36 @@
                 <!-- Imóvel 1 -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Imagem de Imóvel">
+                        <div id="carouselExampleIndicators" class="carousel slide">
+                            <div class="carousel-indicators">
+                              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                            </div>
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img src="img/Apartamentos/Apartamento 1/img (1).jpg" class="d-block w-100" alt="...">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="img/Apartamentos/Apartamento 1/img (2).jpg" class="d-block w-100" alt="...">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="img/Apartamentos/Apartamento 1/img (4).jpg" class="d-block w-100" alt="...">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="img/Apartamentos/Apartamento 1/img (3).jpg" class="d-block w-100" alt="...">
+                              </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                            </button>
+                          </div>    
                         <div class="card-body">
                             <h5 class="card-title">Apartamento no Centro</h5>
                             <p class="card-text">R$ 450.000 - 3 quartos, 2 banheiros e uma vista incrível.</p>
@@ -93,3 +122,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+<!--https://www.jlimoveismg.com/imovel/apartamento-a-venda-3-quartos-iguacu-ipatinga-mg-85m2-id-37-->
