Pagina vendas e alugueis

--- a/contato.html
+++ b/contato.html
@@ -30,9 +30,16 @@
                     <li class="nav-item">
                         <a class="nav-link" href="sobre.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Saiba mais sobre nossa empresa">Sobre</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="imoveis.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Veja os imóveis disponíveis">Imóveis</a>
-                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Imóveis
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="imoveis.html">Compra</a></li>
+                          <li><a class="dropdown-item " href="imoveis_aluguel.html">Alguel</a></li>
+                         
+                        </ul>
+                      </li>
                     <li class="nav-item">
                         <a class="nav-link text-danger" href="contato.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Fale conosco">Contato</a>
                     </li>
