--- a/detalhes_aluguel.html
+++ b/detalhes_aluguel.html
@@ -62,6 +62,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="detalhes_aluguel.js"></script>
+    <script src="detalhes.js"></script>
 </body>
 </html>
