--- a/sobre.html
+++ b/sobre.html
@@ -30,9 +30,16 @@
                         <li class="nav-item">
                             <a class="nav-link text-danger" href="sobre.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Saiba mais sobre nossa empresa">Sobre</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="imoveis.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Veja os imóveis disponíveis">Imóveis</a>
-                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              Imóveis
+                            </a>
+                            <ul class="dropdown-menu">
+                              <li><a class="dropdown-item" href="imoveis.html">Compra</a></li>
+                              <li><a class="dropdown-item " href="imoveis_aluguel.html">Alguel</a></li>
+                             
+                            </ul>
+                          </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contato.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Fale conosco">Contato</a>
                         </li>
@@ -60,9 +67,9 @@
         </div>
     </section>
 </main>
-    <footer class="bg-dark text-white text-center py-4">
+    <footer class="fixed-bottom bg-dark text-white text-center py-4">
         <div class="container">
-            <p class="mb-0">&copy; 2024 Imobiliária Exemplo. Todos os direitos reservados.</p>
+            <p class=" mb-0">&copy; 2024 Imobiliária Exemplo. Todos os direitos reservados.</p>
         </div>
     </footer>
 
