--- a/contato.html
+++ b/contato.html
@@ -48,7 +48,7 @@
         </div>
     </nav>
     <!-- Hero Section -->
-    <div class="bg-primary text-white text-center py-5">
+    <div class="bg-dark  text-white text-center py-5">
         <div class="container">
             <h1>Entre em Contato Conosco</h1>
             <p class="lead">Estamos prontos para ajudar você a encontrar o imóvel perfeito.</p>
