--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           
             <section id="imoveis" class="">
               
-                    <header class="bg-primary text-white text-center py-5">
+                    <header class="bg-dark text-white text-center py-5">
                         <div class="container">
                             <h1>Bem-vindo à Imobiliária Exemplo</h1>
                             <p class="lead">Encontre o imóvel dos seus sonhos conosco!</p>
