--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               
                     <header class="bg-dark text-white text-center py-5">
                         <div class="container">
-                            <h1>Bem-vindo à Imobiliária Exemplo</h1>
+                            <h1>Bem-vindo à Vale Imóveis</h1>
                             <p class="lead">Encontre o imóvel dos seus sonhos conosco!</p>
                             <a href="imoveis.html" class="btn btn-light btn-lg">Ver Imóveis</a>
                         </div>
@@ -111,7 +111,7 @@
     </main>
     <footer class="text-dark text-center py-4">
         <div class="container">
-            <p class="text-light">&copy; 2024 Imobiliária Exemplo. Todos os direitos reservados.</p>
+            <p class="text-light">&copy; 2024 Vale Imóveis. Todos os direitos reservados.</p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>    
