--- a/sobre.html
+++ b/sobre.html
@@ -53,7 +53,7 @@
     <section class="py-5">
         <div class="container">
             <h1 class="text-center mb-4">Sobre Nós</h1>
-            <p class="text-center">A <strong>Imobiliária Exemplo</strong> atua no mercado imobiliário há mais de 10 anos, oferecendo um serviço de excelência na compra, venda e aluguel de imóveis. Nossa equipe de especialistas está comprometida em atender às necessidades dos nossos clientes com transparência e dedicação.</p>
+            <p class="text-center">A <strong>Vale Imóveis</strong> atua no mercado imobiliário há mais de 10 anos, oferecendo um serviço de excelência na compra, venda e aluguel de imóveis. Nossa equipe de especialistas está comprometida em atender às necessidades dos nossos clientes com transparência e dedicação.</p>
             <div class="row mt-4">
                 <div class="col-md-6">
                     <h3>Missão</h3>
@@ -69,7 +69,7 @@
 </main>
     <footer class="fixed-bottom bg-dark text-white text-center py-4">
         <div class="container">
-            <p class=" mb-0">&copy; 2024 Imobiliária Exemplo. Todos os direitos reservados.</p>
+            <p class=" mb-0">&copy; 2024 Vale Imóveis. Todos os direitos reservados.</p>
         </div>
     </footer>
 
