--- a/contato.html
+++ b/contato.html
@@ -152,7 +152,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-4">
         <div class="container">
-            <p class="mb-0">&copy; 2024 Imobiliária Exemplo. Todos os direitos reservados.</p>
+            <p class="mb-0">&copy; 2024 Vale Imóveis. Todos os direitos reservados.</p>
         </div>
     </footer>
     <script>
