--- a/detalhes_aluguel.html
+++ b/detalhes_aluguel.html
@@ -57,7 +57,7 @@
     </div>
     <footer class="bg-dark text-white text-center  py-4">
         <div class="container">
-            <p class="texto mb-0">&copy; 2024 Imobiliária Exemplo. Todos os direitos reservados.</p>
+            <p class="texto mb-0">&copy; 2024 Vale Imóveis. Todos os direitos reservados.</p>
         </div>
     </footer>
 
