--- a/imoveis.html
+++ b/imoveis.html
@@ -322,7 +322,7 @@
 
     <footer class="bg-dark text-white text-center py-4">
         <div class="container">
-            <p class="mb-0">&copy; 2024 Imobiliária Exemplo. Todos os direitos reservados.</p>
+            <p class="mb-0">&copy; 2024 Vale Imóveis. Todos os direitos reservados.</p>
         </div>
     </footer>
     <script>
